Update(s): Project 1 Professor issue fixes.
Signed-off-by: BoimaM <MasfortBoima@gmail.com>